HR Ratings Visible

--- a/HR-Monitor/src/View/applicantInfo.fxml
+++ b/HR-Monitor/src/View/applicantInfo.fxml
@@ -282,29 +282,29 @@
                                                      <items>
                                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                                             <children>
-                                                               <Text layoutX="13.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="130.13671875" />
+                                                               <Label fx:id="txtrheFX" alignment="CENTER" layoutX="15.0" layoutY="10.0" prefHeight="17.0" prefWidth="127.0" style="-fx-text-fill: black;" textAlignment="CENTER" />
                                                             </children>
                                                          </AnchorPane>
                                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                                             <children>
-                                                               <Text layoutX="5.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="130.13671875" />
+                                                               <Label fx:id="txtMotFX" alignment="CENTER" layoutX="8.0" layoutY="10.0" prefHeight="17.0" prefWidth="125.0" style="-fx-text-fill: black;" textAlignment="CENTER" />
                                                             </children>
                                                          </AnchorPane>
                                                          <AnchorPane layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                                             <children>
-                                                               <Text layoutX="10.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="130.13671875" />
+                                                               <Label fx:id="txtSelfFX" alignment="CENTER" layoutX="12.0" layoutY="10.0" prefHeight="17.0" prefWidth="127.0" textAlignment="CENTER" />
                                                             </children>
                                                          </AnchorPane>
                                                          <AnchorPane layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                                             <children>
-                                                               <Text layoutX="8.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="130.13671875" />
+                                                               <Label fx:id="txtPerFX" alignment="CENTER" layoutX="1.0" layoutY="10.0" prefHeight="17.0" prefWidth="146.0" textAlignment="CENTER" />
                                                             </children>
                                                          </AnchorPane>
                                                      </items>
                                                    </SplitPane>
                                                    <SplitPane dividerPositions="0.353518821603928" prefHeight="160.0" prefWidth="200.0">
                                                      <items>
-                                                       <AnchorPane maxWidth="213.0" minHeight="0.0" minWidth="213.0" prefHeight="31.0" prefWidth="213.0">
+                                                       <AnchorPane maxHeight="31.0" maxWidth="213.0" minHeight="0.0" minWidth="213.0" prefHeight="31.0" prefWidth="213.0">
                                                             <children>
                                                                <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-2.0" layoutY="-5.0" maxWidth="213.0" minWidth="213.0" prefHeight="35.0" prefWidth="213.0" style="-fx-background-color: #2980b9;" text="Comments of the Fairteam Member" textAlignment="CENTER" textFill="WHITE">
                                                                   <font>
@@ -313,9 +313,9 @@
                                                                </Label>
                                                             </children>
                                                          </AnchorPane>
-                                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                                       <AnchorPane maxHeight="31.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                                             <children>
-                                                               <TextField layoutX="2.0" layoutY="2.0" prefHeight="25.0" prefWidth="388.0" style="-fx-background-color: transparent;" />
+                                                               <TextField fx:id="txtImpFX" layoutX="2.0" layoutY="2.0" prefHeight="25.0" prefWidth="388.0" style="-fx-background-color: transparent;" />
                                                             </children>
                                                          </AnchorPane>
                                                      </items>
