--- a/HR-Monitor/src/View/applicantInfo.fxml
+++ b/HR-Monitor/src/View/applicantInfo.fxml
@@ -144,19 +144,41 @@
                     <TabPane prefHeight="500.0" prefWidth="582.0" rotateGraphic="true" tabClosingPolicy="UNAVAILABLE">
                        <tabs>
                           <Tab text="Information">
-                             <SplitPane dividerPositions="0.22306525037936267, 0.4977238239757208, 0.8437025796661608" orientation="VERTICAL" prefHeight="160.0" prefWidth="250.0">
+                             <SplitPane dividerPositions="0.15629742033383914, 0.3930197268588771, 0.629742033383915, 0.8573596358118362" orientation="VERTICAL" prefHeight="160.0" prefWidth="250.0">
                                 <items>
-
-                                   <TitledPane alignment="CENTER" collapsible="false" maxHeight="600.0" minHeight="50.0" prefHeight="200.0" text="Education Information" wrapText="true">
+                                       <TitledPane collapsible="false" maxHeight="400.0" minHeight="100.0" prefHeight="200.0" text="Work Experience" wrapText="true">
+                                          <content>
+                                             <TableView fx:id="workInfoTblFX" maxHeight="500.0" prefHeight="0.0">
+                                                <columns>
+                                                   <TableColumn fx:id="jobTitleFX" prefWidth="142.0" text="Title" />
+                                                   <TableColumn fx:id="companyFX" prefWidth="149.0" text="Company" />
+                                                   <TableColumn fx:id="employmentTypeFX" prefWidth="89.0" text="Employment Type" />
+                                                   <TableColumn fx:id="startDateFX" prefWidth="98.0" text="Start Date" />
+                                                   <TableColumn fx:id="endDateFX" prefWidth="102.0" text="End Date" />
+                                                   <TableColumn fx:id="descriptionFX" prefWidth="102.0" text="Description" />
+                                                </columns>
+                                                <columnResizePolicy>
+                                                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                                </columnResizePolicy>
+                                                <cursor>
+                                                   <Cursor fx:constant="DEFAULT" />
+                                                </cursor>
+                                             </TableView>
+                                          </content>
+                                          <cursor>
+                                             <Cursor fx:constant="NONE" />
+                                          </cursor>
+                                       </TitledPane>
+                                   <TitledPane collapsible="false" maxHeight="400.0" minHeight="150.0" prefHeight="200.0" text="Education Info" wrapText="true">
                                       <content>
                                          
                                          <TableView fx:id="eduInfoTblFX" maxHeight="500.0" minHeight="50.0" prefHeight="0.0">
                                             <columns>
-                                               <TableColumn fx:id="universityFX" prefWidth="142.0" style="-fx-alignment: CENTER;" text="University" />
-                                               <TableColumn fx:id="subjectFX" prefWidth="149.0" style="-fx-alignment: CENTER;" text="Subject" />
-                                               <TableColumn fx:id="degreeFX" prefWidth="89.0" style="-fx-alignment: CENTER;" text="Degree" />
-                                               <TableColumn fx:id="gradeFX" prefWidth="98.0" style="-fx-alignment: CENTER;" text="Grade" />
-                                               <TableColumn fx:id="gradYearFX" prefWidth="102.0" style="-fx-alignment: CENTER;" text="Graduation Year" />
+                                               <TableColumn fx:id="universityFX" prefWidth="142.0" text="University" />
+                                               <TableColumn fx:id="subjectFX" prefWidth="149.0" text="Subject" />
+                                               <TableColumn fx:id="degreeFX" prefWidth="89.0" text="Degree" />
+                                               <TableColumn fx:id="gradeFX" prefWidth="98.0" text="Grade" />
+                                               <TableColumn fx:id="gradYearFX" prefWidth="102.0" text="Graduation Year" />
                                             </columns>
                                                 <columnResizePolicy>
                                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -170,7 +192,7 @@
                                          <Cursor fx:constant="NONE" />
                                       </cursor>
                                    </TitledPane>
-                                   <TitledPane alignment="CENTER" collapsible="false" maxHeight="600.0" minHeight="50.0" prefHeight="141.0" text="Key Competencies" wrapText="true">
+                                   <TitledPane alignment="CENTER" collapsible="false" maxHeight="600.0" minHeight="150.0" prefHeight="141.0" text="Key Competencies" wrapText="true">
                                       <content>
                                          <SplitPane dividerPositions="0.20297029702970298, 0.400990099009901, 0.5825082508250825, 0.7739273927392739" maxWidth="5000.0" prefHeight="179.0" prefWidth="560.0">
                                          <items>
@@ -236,12 +258,12 @@
                                       </content>
                                    </TitledPane>
 
-                                   <TitledPane alignment="CENTER" collapsible="false" maxHeight="600.0" minHeight="50.0" prefHeight="453.0" text="Fields of Interest" wrapText="true">
+                                   <TitledPane alignment="CENTER" collapsible="false" maxHeight="600.0" minHeight="94.0" prefHeight="94.0" prefWidth="613.0" text="Fields of Interest" wrapText="true">
                                       <SplitPane dividerPositions="0.5" maxWidth="5000.0" prefHeight="219.0">
                                       <items>
                                          <TableView id="posTable" fx:id="posTable" maxHeight="600.0" maxWidth="2000.0" minHeight="50.0" minWidth="300.0" prefHeight="219.0" prefWidth="600">
                                             <columns>
-                                               <TableColumn fx:id="posFX" maxWidth="2000.0" minWidth="300" prefWidth="700.0" style="-fx-alignment: CENTER;" text="Position" />
+                                               <TableColumn fx:id="posFX" maxWidth="2000.0" minWidth="300" prefWidth="700.0" text="Position" />
                                             </columns>
                                                 <cursor>
                                                    <Cursor fx:constant="DEFAULT" />
@@ -253,7 +275,7 @@
 
                                          <TableView id="posTable" fx:id="indTable" maxHeight="1000.0" maxWidth="5000.0" minHeight="50.0" minWidth="300.0" prefHeight="219.0" prefWidth="0.0">
                                             <columns>
-                                               <TableColumn id="indFX" fx:id="indFX" maxWidth="5000.0" minWidth="300" prefWidth="700.0" style="-fx-alignment: CENTER;" text="Industry" />
+                                               <TableColumn id="indFX" fx:id="indFX" maxWidth="5000.0" minWidth="300" prefWidth="700.0" text="Industry" />
                                             </columns>
                                             <cursor>
                                                <Cursor fx:constant="DEFAULT" />
@@ -274,18 +296,18 @@
 
                                       </SplitPane>
                                    </TitledPane>
-                                   <TitledPane alignment="CENTER" collapsible="false" maxHeight="600.0" minHeight="100.0" prefHeight="150.0" text="HR Ratings" wrapText="true">
+                                   <TitledPane alignment="CENTER" collapsible="false" maxHeight="600.0" minHeight="80.0" prefHeight="84.0" prefWidth="613.0" text="HR Ratings" wrapText="true">
                                           <content>
-                                             <SplitPane dividerPositions="0.5405405405405406" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
+                                             <SplitPane dividerPositions="0.8583690987124464" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
                                                 <items>
-                                                   <SplitPane dividerPositions="0.2618657937806874, 0.5008183306055647, 0.7561374795417348" prefHeight="160.0" prefWidth="200.0">
+                                                   <SplitPane dividerPositions="0.220949263502455, 0.45499181669394434, 0.6890343698854338" maxHeight="30.0" prefHeight="160.0" prefWidth="200.0">
                                                      <items>
                                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                                             <children>
                                                                <Label fx:id="txtrheFX" alignment="CENTER" layoutX="15.0" layoutY="10.0" prefHeight="17.0" prefWidth="127.0" style="-fx-text-fill: black;" textAlignment="CENTER" />
                                                             </children>
                                                          </AnchorPane>
-                                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="30.0" prefWidth="165.0">
                                                             <children>
                                                                <Label fx:id="txtMotFX" alignment="CENTER" layoutX="8.0" layoutY="10.0" prefHeight="17.0" prefWidth="125.0" style="-fx-text-fill: black;" textAlignment="CENTER" />
                                                             </children>
@@ -300,13 +322,15 @@
                                                                <Label fx:id="txtPerFX" alignment="CENTER" layoutX="1.0" layoutY="10.0" prefHeight="17.0" prefWidth="146.0" textAlignment="CENTER" />
                                                             </children>
                                                          </AnchorPane>
+
                                                      </items>
                                                    </SplitPane>
-                                                   <SplitPane dividerPositions="0.353518821603928" prefHeight="160.0" prefWidth="200.0">
+                                                   <SplitPane dividerPositions="0.19639934533551553" maxHeight="30.0" prefHeight="160.0" prefWidth="200.0">
                                                      <items>
-                                                       <AnchorPane maxHeight="31.0" maxWidth="213.0" minHeight="0.0" minWidth="213.0" prefHeight="31.0" prefWidth="213.0">
+                                                       <AnchorPane maxHeight="31.0" maxWidth="213.0" minHeight="0.0" minWidth="98.0" prefHeight="29.0" prefWidth="98.0">
+
                                                             <children>
-                                                               <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-2.0" layoutY="-5.0" maxWidth="213.0" minWidth="213.0" prefHeight="35.0" prefWidth="213.0" style="-fx-background-color: #2980b9;" text="Comments of the Fairteam Member" textAlignment="CENTER" textFill="WHITE">
+                                                               <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-2.0" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: #2980b9;" text="Comments" textAlignment="CENTER" textFill="WHITE">
                                                                   <font>
                                                                      <Font name="System Bold" size="12.0" />
                                                                   </font>
@@ -316,6 +340,7 @@
                                                        <AnchorPane maxHeight="31.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                                             <children>
                                                                <TextField fx:id="txtImpFX" layoutX="2.0" layoutY="2.0" prefHeight="25.0" prefWidth="388.0" style="-fx-background-color: transparent;" />
+
                                                             </children>
                                                          </AnchorPane>
                                                      </items>
