Improve the dark mode look on the home page

--- a/frontend/src/app/home/home.page.html
+++ b/frontend/src/app/home/home.page.html
@@ -2,10 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="end" class="toolbar-buttons">
       <ion-button class="notification-button" (click)="goToApplications()">
-        <ion-icon
-          class="custom-icon"
-          name="file-tray-stacked-outline"
-        ></ion-icon>
+        <ion-icon name="file-tray-stacked-outline"></ion-icon>
         <ion-badge
           class="notifications-badge"
           color="danger"
@@ -17,7 +14,7 @@
         class="notification-button ion-margin-top"
         (click)="openLanguagePicker($event)"
       >
-        <ion-icon class="custom-icon" name="settings-outline"></ion-icon>
+        <ion-icon name="settings-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
