--- a/frontend/src/app/home/home.page.scss
+++ b/frontend/src/app/home/home.page.scss
@@ -1,3 +1,39 @@
+ion-header ion-toolbar {
+  // Looks better in Dark Mode.
+  --background: transparent;
+}
+
+.toolbar-buttons {
+  display: flex;
+  flex-direction: column;
+}
+.toolbar-buttons > * {
+  margin: 10px;
+}
+.toolbar-buttons ion-icon {
+  font-size: 40px;
+  color: var(--ion-color-light-shade);
+}
+@media (prefers-color-scheme: dark) {
+  .toolbar-buttons ion-icon {
+    color: var(--ion-color-medium);
+  }
+}
+
+.notification-button {
+  position: relative;
+  overflow: visible !important;
+  min-height: 40px;
+}
+.notifications-badge {
+  background-color: var(--ion-color-secondary);
+  position: absolute;
+  top: 0px;
+  right: -5px;
+  border-radius: 50%;
+  font-size: 15px;
+}
+
 .container {
   padding: 1.5rem;
   max-width: 500px;
@@ -41,33 +77,4 @@ h3 {
 }
 .logo-square {
   fill: var(--ion-color-secondary);
-}
-
-.custom-icon {
-  font-size: 40px;
-  color: var(--ion-color-light-shade);
-}
-
-.notification-button {
-  position: relative;
-  overflow: visible !important;
-  min-height: 40px;
-}
-
-.notifications-badge {
-  background-color: var(--ion-color-secondary);
-  position: absolute;
-  top: 0px;
-  right: -5px;
-  border-radius: 50%;
-  font-size: 15px;
-}
-
-.toolbar-buttons {
-  display: flex;
-  flex-direction: column;
-}
-
-.toolbar-buttons > * {
-  margin: 10px;
 }
