--- a/frontend/src/theme/custom.scss
+++ b/frontend/src/theme/custom.scss
@@ -9,6 +9,7 @@ html.ios {
 /*
   Typography
 */
+
 h1 {
   font-size: 39px;
   letter-spacing: 4px;
@@ -172,4 +173,29 @@ ion-content.without-ion-header {
   --width: 350px;
   // Make sure the Popover doesn't get too large.
   --max-width: 90%;
+}
+
+/*
+  Improvements of native Ionic items regarding Dark Mode support.
+*/
+@media (prefers-color-scheme: dark) {
+  ion-popover {
+    --ion-background-color: var(--ion-color-light);
+  }
+  ion-popover ion-item,
+  ion-popover ion-header ion-toolbar {
+    --background: var(--ion-background-color);
+  }
+  ion-popover ion-header ion-toolbar {
+    --border-color: var(--ion-color-light-tint);
+  }
+
+  ion-toggle {
+    --background: var(--ion-color-light-tint);
+    --background-checked: var(--ion-color-tertiary);
+  }
+
+  ion-item {
+    --color: var(--ion-color-primary);
+  }
 }
