--- a/frontend/src/app/forms/forms.page.scss
+++ b/frontend/src/app/forms/forms.page.scss
@@ -3,6 +3,12 @@
 ion-progress-bar {
   height: 10px;
 }
+@media (prefers-color-scheme: dark) {
+  ion-progress-bar {
+    --background: var(--ion-color-light);
+    --progress-background: var(--ion-color-tertiary);
+  }
+}
 
 .custom-skip {
   opacity: 0.15;
