Improve select labels

--- a/frontend/src/app/forms/steps/work-experience/work-experience-entry/work-experience-entry.component.html
+++ b/frontend/src/app/forms/steps/work-experience/work-experience-entry/work-experience-entry.component.html
@@ -37,9 +37,9 @@
 
       <ion-item class="ion-no-padding entry-item">
         <ion-icon slot="start" name="briefcase-outline" size="large"></ion-icon>
-        <ion-label color="medium">{{
-          'workExperience.employmentType' | translate
-        }}</ion-label>
+        <ion-label class="ion-select-label">
+          {{ 'workExperience.employmentType' | translate }}
+        </ion-label>
         <ion-select
           slot="end"
           interface="popover"
