--- a/frontend/src/app/forms/steps/education-info/education-info-entry/education-info-entry.component.html
+++ b/frontend/src/app/forms/steps/education-info/education-info-entry/education-info-entry.component.html
@@ -37,7 +37,7 @@
 
       <ion-item class="ion-no-padding entry-item">
         <ion-icon slot="start" name="school-outline" size="large"></ion-icon>
-        <ion-label color="medium">
+        <ion-label>
           {{ 'educationInfo.degree' | translate }}
         </ion-label>
         <ion-select
