Improve the dark mode progress bar on the rating page

--- a/frontend/src/app/rating/rating.page.scss
+++ b/frontend/src/app/rating/rating.page.scss
@@ -1,3 +1,9 @@
 ion-progress-bar {
   height: 10px;
 }
+@media (prefers-color-scheme: dark) {
+  ion-progress-bar {
+    --background: var(--ion-color-light);
+    --progress-background: var(--ion-color-tertiary);
+  }
+}
