Improve time icon alignment

--- a/frontend/src/app/applicants/applicants.page.html
+++ b/frontend/src/app/applicants/applicants.page.html
@@ -49,7 +49,7 @@
             <h1>
               {{data.basicInfo.firstName }} {{ data.basicInfo.lastName}}
             </h1>
-            <p>
+            <p class="submitted-time">
               <ion-icon name="time-outline"></ion-icon>
               {{data.submittedTime}}
             </p>
