--- a/frontend/src/app/home/home.page.html
+++ b/frontend/src/app/home/home.page.html
@@ -1,21 +1,16 @@
 <ion-header class="ion-no-border ion-padding">
   <ion-toolbar>
     <ion-buttons slot="end" class="toolbar-buttons">
-      <ion-button class="notification-button" (click)="goToApplications()">
+      <button class="notification-button" (click)="goToApplications()">
         <ion-icon name="file-tray-stacked-outline"></ion-icon>
-        <ion-badge
-          class="notifications-badge"
-          color="danger"
-          *ngIf="applicationSize"
-          >{{applicationSize}}</ion-badge
+
+        <span class="notifications-badge" *ngIf="applicationSize"
+          >{{applicationSize}}</span
         >
-      </ion-button>
-      <ion-button
-        class="notification-button ion-margin-top"
-        (click)="openLanguagePicker($event)"
-      >
+      </button>
+      <button (click)="openLanguagePicker($event)">
         <ion-icon name="settings-outline"></ion-icon>
-      </ion-button>
+      </button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
