--- a/frontend/src/app/home/home.page.scss
+++ b/frontend/src/app/home/home.page.scss
@@ -7,10 +7,13 @@ ion-header ion-toolbar {
   display: flex;
   flex-direction: column;
 }
-.toolbar-buttons > * {
+.toolbar-buttons button {
+  padding: 0;
   margin: 10px;
+  background: transparent;
+  outline: none;
 }
-.toolbar-buttons ion-icon {
+.toolbar-buttons button ion-icon {
   font-size: 40px;
   color: var(--ion-color-light-shade);
 }
@@ -22,16 +25,20 @@ ion-header ion-toolbar {
 
 .notification-button {
   position: relative;
-  overflow: visible !important;
-  min-height: 40px;
 }
 .notifications-badge {
-  background-color: var(--ion-color-secondary);
+  background: var(--ion-color-secondary);
+  color: var(--ion-color-secondary-contrast);
   position: absolute;
-  top: 0px;
+  top: -3px;
   right: -5px;
-  border-radius: 50%;
+  border-radius: 1000px;
   font-size: 15px;
+  font-weight: 700;
+  line-height: 20px;
+  min-width: 20px;
+  padding-left: 4px;
+  padding-right: 4px;
 }
 
 .container {
