--- a/frontend/src/theme/custom.scss
+++ b/frontend/src/theme/custom.scss
@@ -61,8 +61,13 @@ ion-list-header {
 }
 
 /*
-  Items
+  Items and labels
 */
+
+ion-item {
+  // In MD mode, Ionic shows a red or green line for input elements or similar by default. This doesn't look that great. --> Disable this.
+  --show-full-highlight: 0;
+}
 ion-item.item-has-focus {
   --border-color: var(--ion-color-primary);
 }
@@ -74,6 +79,19 @@ ion-item.item-interactive.item-select ion-label {
   ion-item.item-interactive.item-select ion-label {
     --color: var(--ion-color-step-400);
   }
+}
+
+.label-floating.sc-ion-label-md-h {
+  // By default, floating labels are positioned a bit too much to the top.
+  transform: translate3d(0, 115%, 0);
+}
+
+/*
+  Pickers
+*/
+
+ion-picker-column.md .picker-opt.picker-opt-selected {
+  color: var(--ion-color-tertiary, #5875c7);
 }
 
 /*
@@ -150,17 +168,22 @@ ion-content.without-ion-header {
   [aria-checked='true'].sc-ion-alert-ios .alert-checkbox-icon.sc-ion-alert-ios,
   [aria-checked='true'].sc-ion-alert-md .alert-checkbox-icon.sc-ion-alert-md {
     border-color: var(--ion-color-tertiary);
-    background-color: var(--ion-color-contrast);
+    background-color: var(--ion-color-tertiary-contrast);
   }
 
   .alert-checkbox-label.sc-ion-alert-ios,
   .alert-checkbox-label.sc-ion-alert-md {
-    white-space: pre-wrap;
+    white-space: normal;
   }
 
   [aria-checked='true'].sc-ion-alert-ios .alert-checkbox-inner.sc-ion-alert-ios,
   [aria-checked='true'].sc-ion-alert-md .alert-checkbox-inner.sc-ion-alert-md {
     border-color: var(--ion-color-tertiary);
+  }
+
+  .alert-tappable {
+    contain: none !important;
+    height: auto !important;
   }
 }
 /**
@@ -187,6 +210,7 @@ ion-content.without-ion-header {
 /*
   Improvements of native Ionic items regarding Dark Mode support.
 */
+
 @media (prefers-color-scheme: dark) {
   ion-popover {
     --ion-background-color: var(--ion-color-light);
