Fix scroll position after switching to a new step

--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -31,7 +31,7 @@
   [currentStep]="currentStep"
 ></app-side-menu>
 
-<ion-content>
+<ion-content #content>
   <div class="main-container with-bottom-buttons">
     <div
       class="skip-step-toggle"
