--- a/frontend/src/app/rating/steps/applicant-score/applicant-score.component.html
+++ b/frontend/src/app/rating/steps/applicant-score/applicant-score.component.html
@@ -11,6 +11,7 @@
   </ion-list-header>
   <ion-item class="rating">
     <ion-range
+      mode="ios"
       min="1"
       max="5"
       step="1"
@@ -26,6 +27,7 @@
   </ion-list-header>
   <ion-item class="rating">
     <ion-range
+      mode="ios"
       min="1"
       max="5"
       step="1"
@@ -41,6 +43,7 @@
   </ion-list-header>
   <ion-item class="rating">
     <ion-range
+      mode="ios"
       min="1"
       max="5"
       step="1"
@@ -56,6 +59,7 @@
   </ion-list-header>
   <ion-item class="rating">
     <ion-range
+      mode="ios"
       min="1"
       max="5"
       step="1"
