--- a/frontend/src/app/forms/steps/key-competencies/rating-modal/rating-modal.component.scss
+++ b/frontend/src/app/forms/steps/key-competencies/rating-modal/rating-modal.component.scss
@@ -1,3 +1,11 @@
+@media (prefers-color-scheme: dark) {
+  ion-searchbar.md {
+    --background: var(--ion-color-medium);
+    --color: var(--ion-color-medium-contrast);
+    --icon-color: var(--ion-color-medium-contrast);
+  }
+}
+
 .container {
   min-height: 100%;
   display: flex;
