Fix display issues with the image viewer on Android

--- a/frontend/src/app/forms/image-viewer/internal/image-viewer.component.html
+++ b/frontend/src/app/forms/image-viewer/internal/image-viewer.component.html
@@ -38,6 +38,7 @@
       <app-base64-image
         [base64String]="control.value"
         [isZoomableSlideImage]="true"
+        (imageHasLoaded)="imageHasLoaded(i)"
         *ngIf="i === currentSlideIndex && viewDidEnter"
       >
         <ion-spinner style="--color: #ffffff;"></ion-spinner>
