Improve the timing on the image viewer's event emitter

--- a/frontend/src/app/forms/common/base64-image/base64-image.component.html
+++ b/frontend/src/app/forms/common/base64-image/base64-image.component.html
@@ -10,5 +10,6 @@
   <img
     [src]="processedImage.templateObjectUrl"
     [class.swiper-zoom-target]="isZoomableSlideImage"
+    (load)="onImageLoad()"
   />
 </div>
