Resize image viewer pictures for better performance

--- a/frontend/src/app/forms/image-viewer/internal/image-viewer.component.html
+++ b/frontend/src/app/forms/image-viewer/internal/image-viewer.component.html
@@ -38,6 +38,8 @@
       <app-base64-image
         [base64String]="control.value"
         [isZoomableSlideImage]="true"
+        [maxImageWidth]="2000"
+        [maxImageHeight]="2000"
         (imageHasLoaded)="imageHasLoaded(i)"
         *ngIf="i === currentSlideIndex && viewDidEnter"
       >
