--- a/HR-Monitor/src/View/applicantInfo.fxml
+++ b/HR-Monitor/src/View/applicantInfo.fxml
@@ -7,6 +7,58 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
+<!--
+                            <SplitPane dividerPositions="0.5" orientation="VERTICAL">
+                               <SplitPane dividerPositions="0.220949263502455, 0.45499181669394434, 0.6890343698854338" maxHeight="30.0" minHeight="30.0" prefHeight="160.0" prefWidth="200.0">
+                                  <items>
+
+                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                        <children>
+                                           <Label fx:id="txtrheFX" alignment="CENTER" layoutX="7.0" layoutY="7.0" prefHeight="17.0" prefWidth="127.0" style="-fx-text-fill: black;" textAlignment="CENTER" />
+                                        </children>
+                                     </AnchorPane>
+                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="30.0" prefWidth="165.0">
+                                        <children>
+                                           <Label fx:id="txtMotFX" alignment="CENTER" layoutX="11.0" layoutY="5.0" prefHeight="17.0" prefWidth="125.0" style="-fx-text-fill: black;" textAlignment="CENTER" />
+                                        </children>
+                                     </AnchorPane>
+                                     <AnchorPane layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                        <children>
+                                           <Label fx:id="txtSelfFX" alignment="CENTER" layoutX="10.0" layoutY="5.0" prefHeight="17.0" prefWidth="127.0" textAlignment="CENTER" />
+                                        </children>
+                                     </AnchorPane>
+                                     <AnchorPane layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                        <children>
+                                           <Label fx:id="txtPerFX" alignment="CENTER" layoutX="27.0" layoutY="7.0" prefHeight="17.0" prefWidth="146.0" textAlignment="CENTER" />
+                                        </children>
+                                     </AnchorPane>
+
+                                            </items>
+                                         </SplitPane>
+                                         <SplitPane dividerPositions="0.17901234567901234" maxHeight="30.0" prefHeight="160.0" prefWidth="200.0">
+                                            <items>
+                                               <AnchorPane maxHeight="30.0" maxWidth="213.0" minHeight="30.0" minWidth="98.0" prefHeight="28.0" prefWidth="138.0">
+
+                                                  <children>
+                                                     <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-2.0" maxHeight="30.0" maxWidth="120.0" minHeight="30.0" minWidth="120.0" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: #2980b9;" text="Comments" textAlignment="CENTER" textFill="WHITE">
+                                                        <font>
+                                                           <Font name="System Bold" size="12.0" />
+                                                        </font>
+                                                     </Label>
+                                                  </children>
+                                               </AnchorPane>
+                                               <AnchorPane maxHeight="31.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                                  <children>
+                                                     <TextField fx:id="txtImpFX" layoutX="2.0" layoutY="2.0" prefHeight="25.0" prefWidth="524.0" style="-fx-background-color: transparent;" />
+
+                                                  </children>
+                                               </AnchorPane>
+                                            </items>
+                                         </SplitPane>
+
+                                      </SplitPane>
+                                       -->
+
 <BorderPane prefHeight="700.0" prefWidth="900.0" stylesheets="@../Style/stylesheet.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="5" />
@@ -100,6 +152,15 @@
                            <Hyperlink fx:id="hplLinkedInFX" text="" textFill="WHITE" underline="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                         
                            <Hyperlink fx:id="hplXingFX" text="" textFill="WHITE" underline="true" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                           <Label layoutX="20.0" layoutY="220.0" prefHeight="34.0" prefWidth="103.0" text="Status" textFill="WHITE" GridPane.rowIndex="6">
+                              <padding>
+                                 <Insets left="10.0" />
+                              </padding>
+                              <font>
+                                 <Font name="System Bold" size="12.0" />
+                              </font>
+                           </Label>
+                           <Label fx:id="lblStatusFX" alignment="CENTER" minWidth="75.0" prefHeight="17.0" prefWidth="34.0" style="-fx-background-color: transparent; -fx-background-radius: 10 10 10 10;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
 
                      </children>
                   </GridPane>
@@ -135,9 +196,9 @@
                                 <items>
                                    <TitledPane collapsible="false" maxHeight="700.0" minHeight="100.0" prefHeight="200.0" text="Work Experience" wrapText="true">
                                           <content>
-                                             <TableView fx:id="workInfoTblFX" maxHeight="500.0" prefHeight="0.0">
+                                             <TableView fx:id="workInfoTblFX" maxHeight="500.0" prefHeight="0.0" >
                                                 <columns>
-                                                   <TableColumn fx:id="jobTitleFX" prefWidth="142.0" text="Title" />
+                                                   <TableColumn fx:id="jobTitleFX" prefWidth="142.0" text="Title"  />
                                                    <TableColumn fx:id="companyFX" prefWidth="149.0" text="Company" />
                                                    <TableColumn fx:id="employmentTypeFX" prefWidth="89.0" text="Employment Type" />
                                                    <TableColumn fx:id="startDateFX" prefWidth="98.0" text="Start Date" />
@@ -291,59 +352,34 @@
 
                              </ScrollPane>
                           </Tab>
-                           <Tab text="HR Ratings">
-                              <SplitPane maxHeight="30.0" minHeight="30.0" prefHeight="160.0" prefWidth="200.0">
+                           <Tab text="Applicant Ratings">
+                              <SplitPane dividerPositions="0.5555555555555556, 0.786910197869102" maxHeight="657.0" minHeight="30.0" orientation="VERTICAL" prefHeight="657.0" prefWidth="650.0">
                                  <items>
+                                    <VBox>
+                                       <HBox alignment="CENTER" spacing="20.0">
+                                          <Label> Change status</Label>
+                                          <Button fx:id="btnOFX" text="Open"> Open</Button>
+                                          <Button fx:id="btnHRFX"> Send to HR</Button>
+                                          <Button fx:id="btnDFX"> Denied</Button>
+                                             <opaqueInsets>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                             </opaqueInsets>
+                                             <padding>
+                                                <Insets bottom="20.0" right="40.0" top="20.0" />
+                                             </padding>
 
+                                       </HBox>
+
+                                    </VBox>
+                                    <TitledPane collapsible="false" maxHeight="700.0" minHeight="100.0" prefHeight="200.0" text="Comments by the Fairteam Member // Name can be changed" wrapText="true">
+
+                                    </TitledPane>
+                                    <TitledPane collapsible="false" maxHeight="700.0" minHeight="100.0" prefHeight="200.0" text="Comments by the HR Member // Name can be changed" wrapText="true">
+
+                                    </TitledPane>
                                  </items>
                               </SplitPane>
-                              <SplitPane dividerPositions="0.5" orientation="VERTICAL">
-                                 <SplitPane dividerPositions="0.220949263502455, 0.45499181669394434, 0.6890343698854338" maxHeight="30.0" minHeight="30.0" prefHeight="160.0" prefWidth="200.0">
-                                    <items>
-                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                                          <children>
-                                             <Label fx:id="txtrheFX" alignment="CENTER" layoutX="7.0" layoutY="7.0" prefHeight="17.0" prefWidth="127.0" style="-fx-text-fill: black;" textAlignment="CENTER" />
-                                          </children>
-                                       </AnchorPane>
-                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="30.0" prefWidth="165.0">
-                                          <children>
-                                             <Label fx:id="txtMotFX" alignment="CENTER" layoutX="11.0" layoutY="5.0" prefHeight="17.0" prefWidth="125.0" style="-fx-text-fill: black;" textAlignment="CENTER" />
-                                          </children>
-                                       </AnchorPane>
-                                       <AnchorPane layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                                          <children>
-                                             <Label fx:id="txtSelfFX" alignment="CENTER" layoutX="10.0" layoutY="5.0" prefHeight="17.0" prefWidth="127.0" textAlignment="CENTER" />
-                                          </children>
-                                       </AnchorPane>
-                                       <AnchorPane layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                                          <children>
-                                             <Label fx:id="txtPerFX" alignment="CENTER" layoutX="27.0" layoutY="7.0" prefHeight="17.0" prefWidth="146.0" textAlignment="CENTER" />
-                                          </children>
-                                       </AnchorPane>
 
-                                    </items>
-                                 </SplitPane>
-                                 <SplitPane dividerPositions="0.17901234567901234" maxHeight="30.0" prefHeight="160.0" prefWidth="200.0">
-                                    <items>
-                                       <AnchorPane maxHeight="30.0" maxWidth="213.0" minHeight="30.0" minWidth="98.0" prefHeight="28.0" prefWidth="138.0">
-
-                                          <children>
-                                             <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-2.0" maxHeight="30.0" maxWidth="120.0" minHeight="30.0" minWidth="120.0" prefHeight="30.0" prefWidth="120.0" style="-fx-background-color: #2980b9;" text="Comments" textAlignment="CENTER" textFill="WHITE">
-                                                <font>
-                                                   <Font name="System Bold" size="12.0" />
-                                                </font>
-                                             </Label>
-                                          </children>
-                                       </AnchorPane>
-                                       <AnchorPane maxHeight="31.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                                          <children>
-                                             <TextField fx:id="txtImpFX" layoutX="2.0" layoutY="2.0" prefHeight="25.0" prefWidth="524.0" style="-fx-background-color: transparent;" />
-
-                                          </children>
-                                       </AnchorPane>
-                                    </items>
-                                 </SplitPane>
-                              </SplitPane>
                            </Tab>
                        </tabs>
                     </TabPane>
