add css style to pie#Chart

--- a/HR-Monitor/src/Style/stylesheet.css
+++ b/HR-Monitor/src/Style/stylesheet.css
@@ -16,9 +16,25 @@
 
 }
 
+
+
+chart-pie-label-line {
+    -fx-stroke: #8b4513;
+    -fx-fill: #8b4513;
+}
+
+.chart-pie-label {
+    -fx-fill: black;
+    -fx-font-size: 1em;
+}
+.chart-legend {
+   -fx-background-color:  #fafad2;
+   -fx-stroke: #daa520;
+}
 Text {
 -fx-fill: white;
 }
+
 
 GridPane {
     -fx-background-color: #222D41;
