--- a/HR-Monitor/src/View/applicantInfo.fxml
+++ b/HR-Monitor/src/View/applicantInfo.fxml
@@ -196,9 +196,9 @@
                                 <items>
                                    <TitledPane collapsible="false" maxHeight="700.0" minHeight="100.0" prefHeight="200.0" text="Work Experience" wrapText="true">
                                           <content>
-                                             <TableView fx:id="workInfoTblFX" maxHeight="500.0" prefHeight="0.0" >
+                                             <TableView fx:id="workInfoTblFX" maxHeight="500.0" prefHeight="0.0">
                                                 <columns>
-                                                   <TableColumn fx:id="jobTitleFX" prefWidth="142.0" text="Title"  />
+                                                   <TableColumn fx:id="jobTitleFX" prefWidth="142.0" text="Title" />
                                                    <TableColumn fx:id="companyFX" prefWidth="149.0" text="Company" />
                                                    <TableColumn fx:id="employmentTypeFX" prefWidth="89.0" text="Employment Type" />
                                                    <TableColumn fx:id="startDateFX" prefWidth="98.0" text="Start Date" />
@@ -353,14 +353,14 @@
                              </ScrollPane>
                           </Tab>
                            <Tab text="Applicant Ratings">
-                              <SplitPane dividerPositions="0.5555555555555556, 0.786910197869102" maxHeight="657.0" minHeight="30.0" orientation="VERTICAL" prefHeight="657.0" prefWidth="650.0">
+                              <SplitPane dividerPositions="0.6818873668188736, 0.8432267884322678" maxHeight="657.0" minHeight="30.0" orientation="VERTICAL" prefHeight="657.0" prefWidth="650.0">
                                  <items>
-                                    <VBox>
+                                    <VBox maxHeight="3000.0" minHeight="100.0">
                                        <HBox alignment="CENTER" spacing="20.0">
                                           <Label> Change status</Label>
-                                          <Button fx:id="btnOFX" text="Open"> Open</Button>
-                                          <Button fx:id="btnHRFX"> Send to HR</Button>
-                                          <Button fx:id="btnDFX"> Denied</Button>
+                                          <Label fx:id="btnOFX" minWidth="75.0" style="-fx-alignment: CENTER;-fx-background-color: #61d0ee; -fx-background-radius:10 10 10 10" text="Open"> Open</Label>
+                                          <Label fx:id="btnHRFX" minWidth="75.0" style="-fx-alignment: CENTER;-fx-background-color: #5be14f; -fx-background-radius:10 10 10 10"> Send to HR</Label>
+                                          <Label fx:id="btnDFX" minWidth="75.0" style="-fx-alignment: CENTER;-fx-background-color: #ff927e; -fx-background-radius:10 10 10 10"> Denied</Label>
                                              <opaqueInsets>
                                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                              </opaqueInsets>
@@ -372,11 +372,13 @@
 
                                     </VBox>
                                     <TitledPane collapsible="false" maxHeight="700.0" minHeight="100.0" prefHeight="200.0" text="Comments by the Fairteam Member // Name can be changed" wrapText="true">
-
-                                    </TitledPane>
+                                          <content>
+                                             <TextField fx:id="txtImpFX" alignment="TOP_LEFT" prefHeight="90.0" prefWidth="648.0" />
+                                          </content></TitledPane>
                                     <TitledPane collapsible="false" maxHeight="700.0" minHeight="100.0" prefHeight="200.0" text="Comments by the HR Member // Name can be changed" wrapText="true">
-
-                                    </TitledPane>
+                                          <content>
+                                             <TextField fx:id="txtImpHRFX" alignment="TOP_LEFT" prefHeight="72.0" prefWidth="648.0" />
+                                          </content></TitledPane>
                                  </items>
                               </SplitPane>
 
