Code alignment changes done

--- a/frontend/src/app/forms/steps/education-info/education-info.component.html
+++ b/frontend/src/app/forms/steps/education-info/education-info.component.html
@@ -42,7 +42,8 @@
                 'educationInfo.degreeYearGradeMessage'
                   | translate
                     : {
-                        degree: data.controls.degree.value | getI18NStringForDegree,
+                        degree:
+                          data.controls.degree.value | getI18NStringForDegree,
                         graduationYear: data.controls.graduationYear.value,
                         grade: data.controls.grade.value
                       }
