--- a/frontend/src/app/applicants/applicants.page.scss
+++ b/frontend/src/app/applicants/applicants.page.scss
@@ -13,3 +13,10 @@
 .submitted-time ion-icon {
   margin-right: 5px;
 }
+.spinner-css {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transform: scale(1.5);
+}
