--- a/HR-Monitor/src/View/standard.fxml
+++ b/HR-Monitor/src/View/standard.fxml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-<?import javafx.scene.text.TextFlow?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="566.0" prefHeight="493.0" prefWidth="884.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
     <left>
         <BorderPane maxHeight="1.7976931348623157E308" prefHeight="200.0" prefWidth="150.0" BorderPane.alignment="CENTER">
             <top>
@@ -24,15 +18,7 @@
                   <RowConstraints />
                   <RowConstraints />
                   <RowConstraints />
-                        <!--
-                       <RowConstraints maxHeight="70.0" minHeight="70.0" prefHeight="70.0" valignment="CENTER" vgrow="SOMETIMES" />
-
-
-                       <RowConstraints maxHeight="3.0" minHeight="3.0" prefHeight="3.0" vgrow="SOMETIMES" />
-                       <RowConstraints maxHeight="15.0" minHeight="15.0" prefHeight="15.0" vgrow="SOMETIMES" />
-                       <RowConstraints maxHeight="10.0" minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
-                       -->
-                    </rowConstraints>
+                           </rowConstraints>
                     <children>
                         <Text fx:id="textMenuLabel" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.rowIndex="3">
                             <font>
@@ -57,7 +43,7 @@
         </BorderPane>
     </left>
     <center>
-        <BorderPane fx:id="borderPaneCurrentView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="328.0" style="-fx-background-color: gainsboro;" BorderPane.alignment="CENTER" />
+        <BorderPane fx:id="borderPaneCurrentView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="32.0" prefHeight="400.0" prefWidth="665.0" style="-fx-background-color: gainsboro;" BorderPane.alignment="CENTER" />
     </center>
     <bottom>
         <BorderPane style="-fx-background-color: #eeeeee;" BorderPane.alignment="CENTER">
