--- a/HR-Monitor/src/View/standard.fxml
+++ b/HR-Monitor/src/View/standard.fxml
@@ -20,7 +20,7 @@
                   <RowConstraints />
                            </rowConstraints>
                     <children>
-                        <Text fx:id="textMenuLabel" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.rowIndex="3">
+                        <Text fx:id="textMenuLabel" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.rowIndex="3">
                             <font>
                                 <Font size="12.0" />
                             </font>
